@@ -1,3 +1,4 @@
+1/2/13 use list instead of array for challenges
 12/27/12 move createEquationNode to ChallengeNode base class
 12/27/12 move correct/incorrect icons into EquationBoxNode
 12/27/12 move more duplicated code into ChallengeNode base class
